DATE       AUTHOR       CHANGE
---------- ------------ -------------------------------------------------------
2011-03-27 patrickh     Added a new Sphere/Sphere intersection function.
                        Submitted by Sebastian Messerschmidt
2010-11-21 patrickh     gmtl.pc is once again generated for pkg-config usage.

[0.6.1 released - 5.20.2010]===================================================
2010-05-20 patrickh     Added gmtl::ParametericCurve, gmtl::LinearCurve,
                        gmtl::QuadraticCurve, and gmtl::CubicCurve.
                        Submitted by Gao Yang

[0.6.0 released - 3.10.2009]===================================================
2009-03-11 patrickh     Allow Mac OS X users to set the compiler using the $CXX
                        environment variable.
2009-02-12 patrickh     Added gmtl::intersectDoubleSided() for ray/triangle
                        intersection tests.
                        Submitted by Sebasttian Messerschmidt.

[0.5.4 released - 6.27.2007]===================================================
2007-06-27 patrickh     Package gmtl-config separately so that its presence
                        does not prevent parallel installation of multiple
                        GMTL versions.

[0.5.3 released - 6.26.2007]===================================================
2007-06-26 patrickh     Fixed a bug in gmtl-config.
                        NEW VERSION: 0.5.3

[0.5.2 released - 6.25.2007]===================================================
2007-06-25 patrickh     Fixed a bug in the include path written to gmtl.fpc.
                        NEW VERSION: 0.5.2

[0.5.1 released - 6.25.2007]===================================================
2007-06-25 patrickh     Added gmtl::convertTo<...>() in the new header file
                        gmtl/Misc/MatrixConvert.h. This file relies on Boost.
2007-06-13 patrickh     Switched from pkg-config to Flagpoll.